# audio-plugin-wahmbulance

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  poetry.toml  pyproject.toml  tasks.py
.github/workflows/: cmake_ctest.yml
Source/: PluginProcessor.cpp
packaging/: create_icon.sh  dmg.json  dmg.py  installer.iss  wahmbulance.icns
resources/: CMakeLists.txt  svglayers2svg.py
scripts/: bootstrap.sh  build.sh  test.sh
source/: CWDspMath.h  CWLookAndFeel.h  EnvelopeFollower.cpp  EnvelopeFollower.h  LowpassFilter.cpp  LowpassFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VariableFreqBiquadFilter.cpp  VariableFreqBiquadFilter.h  adjustable_biquad_filter.cpp  adjustable_biquad_filter.h  dsp_math.h  envelope_follower.cpp  envelope_follower.h  knob_view.h  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  wahm_look_and_feel.h
tests/: PluginBasics.cpp  dsp_math_test.cpp  plugin_test.cpp
