[tool.poetry]
name = "autowah-juce"
version = "0.1.0"
description = ""
authors = ["Christopher Woodall <chris.j.woodall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pre-commit = "^3.5.0"
clang-format = "^17.0.6"
dmgbuild = [{ version = "^1.6.1", platform = 'darwin' }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
